<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFFDD1"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:baselineAligned="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/burgger" />

            <TextView
                android:id="@+id/FoodNameLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Food Name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#7DF0FF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/substrac"
                    android:layout_width="101dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:padding="5dp"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/minus"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/qty"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="101dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/add" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#CFFDD1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Detaildescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/descriptionfood" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edttext_background"
            android:ems="10"
            android:hint="Your Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="9dp" />

        <EditText
            android:id="@+id/phoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edttext_background"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="9dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="Price"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/rs"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceLbl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/details_price_amt"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/insertButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:backgroundTint="#2EC334"
            android:text="@string/order_now"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>